--- a/Index.html
+++ b/Index.html
@@ -1,6 +1,8 @@
 <!doctype html>
 <html>
 <head>
+<link rel="stylesheet" href="style.css">
+	
 <meta charset="utf-8">
 <title>test hjemmeside</title>
 </head>
@@ -10,6 +12,8 @@
 	<hr>
 	<h2>Siden her indeholder:</h2>
 <img src="Billeder til opgave, Liam/IMG_0849.jpg" loading="lazy" width="600" height="400" alt="billede af skræmmende træ i mørk skov"/>
+	
+	
 <li>h1</li>
 	<li>h2</li>
 	<li>p</li>
