--- a/Hjemmeside replika.html
+++ b/Hjemmeside replika.html
@@ -1,10 +1,46 @@
 <!doctype html>
 <html>
 <head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="Replika style.css">
 <meta charset="utf-8">
 <title>Untitled Document</title>
 </head>
 
 <body>
+<div class="main-color-grid">
+	
+<header class="header-grid">
+<div class="header-logo">
+<img src="logo.png" alt="Logo">
+</div>
+<div class="header-title">
+<h1>Mine hjemmesider</h1>
+</div>
+<div class="header-searchbar">
+<input type="text" placeholder="Søg efter tilbud her!">
+<button type="submit">Søg</button>
+</div>
+
+</header>
+</div>
+
+	
+<div class="picture-grid">
+
+<img src="Eksamensopgave logoer/365.png" alt="billede af 365 logo">	
+<img src="Eksamensopgave logoer/Aldi.png" alt="billede af aldi logo">
+<img src="Eksamensopgave logoer/brugsen.png" alt="Billede af brugsen logo">
+<img src="Eksamensopgave logoer/kvickly rektangel.png" alt="Billede af kvickly logo">
+<img src="Eksamensopgave logoer/Lidl.png" alt="Billede af lidl logo">
+<img src="Eksamensopgave logoer/Min købmand.png" alt="billede af min købmand logo">
+<img src="Eksamensopgave logoer/Netto.png" alt="Billede af netto logo">
+<img src="Eksamensopgave logoer/Power.png" alt="billede af power logo">
+<img src="Eksamensopgave logoer/rema 1000.png" alt="billede af rema 1000 logo">
+<img src="Eksamensopgave logoer/spar.png" alt="billede af spar logo">
+<img src="Eksamensopgave logoer/Elgiganten.png" alt="billede af elgiganten logo">	
+
+</div>
+	
 </body>
 </html>
