--- a/Hjemmeside replika.html
+++ b/Hjemmeside replika.html
@@ -12,10 +12,10 @@
 	
 <header class="header-grid">
 <div class="header-logo">
-<img src="logo.png" alt="Logo">
+<img src= alt="Logo">
 </div>
 <div class="header-title">
-<h1>Mine hjemmesider</h1>
+<h1>Minetilbud</h1>
 </div>
 <div class="header-searchbar">
 <input type="text" placeholder="Søg efter tilbud her!">
