--- a/Hjemmeside replika.html
+++ b/Hjemmeside replika.html
@@ -8,22 +8,18 @@
 </head>
 
 <body>
-<div class="main-color-grid">
-	
-<header class="header-grid">
-<div class="header-logo">
-<img src= alt="Logo">
-</div>
-<div class="header-title">
-<h1>Minetilbud</h1>
-</div>
-<div class="header-searchbar">
+
+<header class="main-color-grid">
+  <div class="header-container">
+    <img src="Eksamensopgave logoer/Satelit.png" alt="Logo" class="header-logo">
+    <h1 class="header-title">Minetilbud</h1>
+     <div class="header-searchbar">
 <input type="text" placeholder="Søg efter tilbud her!">
 <button type="submit">Søg</button>
 </div>
-
+    </div>
 </header>
-</div>
+
 
 	
 <div class="picture-grid">
