--- a/Hjemmeside replika.html
+++ b/Hjemmeside replika.html
@@ -12,6 +12,7 @@
 <header class="main-color-grid">
   <div class="header-container">
     <img src="Eksamensopgave logoer/Satelit.png" alt="Logo" class="header-logo">
+	  <img src="Eksamensopgave logoer/Satelit.png" alt="sattelit" class="header-sattelit">
     <h1 class="header-title">Minetilbud</h1>
      <div class="header-searchbar">
 <input type="text" placeholder="Søg efter tilbud her!">
