--- a/Hjemmeside replika.html
+++ b/Hjemmeside replika.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="Replika style.css">
 <meta charset="utf-8">
 <title>Untitled Document</title>
@@ -10,19 +10,37 @@
 <body>
 
 <header class="main-color-grid">
-  <div class="header-container">
-    <img src="Eksamensopgave logoer/Satelit.png" alt="Logo" class="header-logo">
-	  <img src="Eksamensopgave logoer/Satelit.png" alt="sattelit" class="header-sattelit">
-    <h1 class="header-title">Minetilbud</h1>
-     <div class="header-searchbar">
+ <div class="header-container">
+ <h1 class="header-title">Minetilbud</h1>
+ <div class="header-searchbar">
 <input type="text" placeholder="Søg efter tilbud her!">
-<button type="submit">Søg</button>
+<button type="submit">Søg<br>
+</button>
+<img src="Eksamensopgave logoer/Satelit.png" alt="Logo" class="header-logo">
+</div>
+<div class="white-header-box">
+<p>8500, Grenaa</p>
 </div>
     </div>
 </header>
 
+<di class="reklame-banner">
+<img src="Eksamensopgave logoer/Skousen banner.jpg" alt="reklame banner til skousen">
+</di>
 
+<div class="forside-grid">
 	
+<div class="sidebar">
+<p class ="kategori aktiv"> Alle</p>
+<p class ="kategori"> Elektronik</p>
+<p class ="kategori"> Hus &amp; have</p>
+<p class ="kategori"> Personlig Pleje</p>
+<p class ="kategori"> Husdyr </p>
+<p class ="kategori"> Småbørn </p>
+<p class ="kategori"> Tøj</p>
+
+</div>
+
 <div class="picture-grid">
 
 <img src="Eksamensopgave logoer/365.png" alt="billede af 365 logo">	
@@ -39,5 +57,7 @@
 
 </div>
 	
+</div>
+
 </body>
 </html>
