--- a/Hjemmeside replika.html
+++ b/Hjemmeside replika.html
@@ -10,19 +10,19 @@
 <body>
 
 <header class="main-color-grid">
- <div class="header-container">
- <h1 class="header-title">Minetilbud</h1>
- <div class="header-searchbar">
-<input type="text" placeholder="Søg efter tilbud her!">
-<button type="submit">Søg<br>
-</button>
-<img src="Eksamensopgave logoer/Satelit.png" alt="Logo" class="header-logo">
-</div>
-<div class="white-header-box">
-<p>8500, Grenaa</p>
-</div>
+    <div class="header-container">
+        <h1 class="header-title">Minetilbud</h1>
+        <div class="header-searchbar">
+            <input type="text" placeholder="Søg efter tilbud her!">
+            <button type="submit">Søg<br> </button>
+        </div>
+        <img src="Eksamensopgave logoer/Satelit.png" alt="Logo" class="header-logo">
+        <div class="white-header-box">
+            <p>8500, Grenaa</p>
+        </div>
     </div>
 </header>
+
 
 <di class="reklame-banner">
 <img src="Eksamensopgave logoer/Skousen banner.jpg" alt="reklame banner til skousen">
