--- a/Hjemmeside replika.html
+++ b/Hjemmeside replika.html
@@ -11,7 +11,9 @@
 
 <header class="main-color-grid">
     <div class="header-container">
+		<div class="header-title-container">
         <h1 class="header-title">Minetilbud</h1>
+		</div>
         <div class="header-searchbar">
             <input type="text" placeholder="Søg efter tilbud her!">
             <button type="submit">Søg<br> </button>
@@ -41,6 +43,7 @@
 
 </div>
 
+
 <div class="picture-grid">
 
 <img src="Eksamensopgave logoer/365.png" alt="billede af 365 logo">	
@@ -56,6 +59,9 @@
 <img src="Eksamensopgave logoer/Elgiganten.png" alt="billede af elgiganten logo">	
 
 </div>
+
+	
+
 	
 </div>
 
