--- a/Hjemmeside replika - underside efter søg.html
+++ b/Hjemmeside replika - underside efter søg.html
@@ -41,7 +41,7 @@
 <p Class="underside-kategori3-aktiv"> Vis alle </p>
 </div>
 
-<div class="søgeresultater">
+<div class="sogeresultater">
 	
 <div class="søgeresultat-box1"></div>
 <img src="Eksamensopgave logoer/365.png" alt="365">
