--- a/Hjemmeside replika.html
+++ b/Hjemmeside replika.html
@@ -17,7 +17,9 @@
 		</div>
         <div class="header-searchbar">
             <input type="text" placeholder="Søg efter tilbud her!">
+			<a href="Hjemmeside replika - underside efter søg.html">
             <button type="submit">Søg<br> </button>
+			</a>
         </div>
         <img src="Eksamensopgave logoer/Satelit.png" alt="Logo" class="header-logo">
         <div class="white-header-box">
