--- a/Hjemmeside replika - underside efter søg.html
+++ b/Hjemmeside replika - underside efter søg.html
@@ -40,32 +40,32 @@
         <div class="sogeresultater content">
             <div class="sogeresultat-box">
                 <img src="Eksamensopgave logoer/365.png" alt="365">
-                <p>Libero 365 25kr</p>
+                <p class="text">Libero 25kr</p>
             </div>
 			
 			<div class="sogeresultat-box">
                 <img src="Eksamensopgave logoer/Aldi.png" alt="Aldi">
-                <p>Libero Aldi 25kr</p>
+                <p class="text">Libero  25kr</p>
             </div>
 			
 			<div class="sogeresultat-box">
                 <img src="Eksamensopgave logoer/brugsen.png" alt="Brugsen">
-                <p>Libero Brugsen 25kr</p>
+                <p class="text">Libero  25kr</p>
             </div>
 			
 			<div class="sogeresultat-box">
                 <img src="Eksamensopgave logoer/Netto.png" alt="Netto">
-                <p>Libero Netto 25kr</p>
+                <p class="text">Libero  25kr</p>
             </div>
 			
 			<div class="sogeresultat-box">
                 <img src="Eksamensopgave logoer/spar.png" alt="Spar">
-                <p>Libero Spar 25kr</p>
+                <p class="text">Libero  25kr</p>
             </div>
 			
 			<div class="sogeresultat-box">
                 <img src="Eksamensopgave logoer/rema 1000.png" alt="Rema 1000">
-                <p>Libero Rema 100 25kr</p>
+                <p class="text">Libero  25kr</p>
             </div>
             
            
