--- a/Eksamensopgave logoer/Hjemmeside replika - underside efter søg.html
+++ b/Eksamensopgave logoer/Hjemmeside replika - underside efter søg.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="Eksamensopgave logoer/Hjemmeside replika - underside efter søg - style.css">
+<link rel="stylesheet" href="Hjemmeside replika - underside efter søg - style.css">
 <title>Untitled Document</title>
 </head>
 
@@ -10,14 +10,14 @@
 <header class="main-color-grid">
     <div class="header-container">
 		<div class="header-title-container">
-		<a href="Hjemmeside replika.html">
+		<a href="../Hjemmeside replika.html">
         <h1 class="header-title">Minetilbud</h1> </a>
 		</div>
         <div class="header-searchbar">
             <input type="text" placeholder="Bleer">
             <button type="submit">Søg<br> </button>
         </div>
-        <img src="Eksamensopgave logoer/Satelit.png" alt="Logo" class="header-logo">
+        <img src="Satelit.png" alt="Logo" class="header-logo">
         <div class="white-header-box">
             <p>8500, Grenaa</p>
         </div>
@@ -39,32 +39,32 @@
 
         <div class="sogeresultater">
             <div class="sogeresultat-box">
-                <img src="Eksamensopgave logoer/365.png" alt="365">
+                <img src="365.png" alt="365">
                 <p class="text"> 45kr</p>
             </div>
 			
 			<div class="sogeresultat-box">
-                <img src="Eksamensopgave logoer/Aldi.png" alt="Aldi">
+                <img src="Aldi.png" alt="Aldi">
                 <p class="text"> 26kr</p>
             </div>
 			
 			<div class="sogeresultat-box">
-                <img src="Eksamensopgave logoer/brugsen.png" alt="Brugsen">
+                <img src="brugsen.png" alt="Brugsen">
                 <p class="text"> 25kr</p>
             </div>
 			
 			<div class="sogeresultat-box">
-                <img src="Eksamensopgave logoer/Netto.png" alt="Netto">
+                <img src="Netto.png" alt="Netto">
                 <p class="text">  35kr</p>
             </div>
 			
 			<div class="sogeresultat-box">
-                <img src="Eksamensopgave logoer/spar.png" alt="Spar">
+                <img src="spar.png" alt="Spar">
                 <p class="text">  55kr</p>
             </div>
 			
 			<div class="sogeresultat-box">
-                <img src="Eksamensopgave logoer/rema 1000.png" alt="Rema 1000">
+                <img src="rema 1000.png" alt="Rema 1000">
                 <p class="text-right">22kr</p>
 				
 				
