--- a/Hjemmeside replika.html
+++ b/Hjemmeside replika.html
@@ -17,11 +17,11 @@
 		</div>
         <div class="header-searchbar">
             <input type="text" placeholder="Søg efter tilbud her!">
-			<a href="Hjemmeside replika - underside efter søg.html">
+			<a href="../../Documents/GitHub/Opgaver/Hjemmeside replika - underside efter søg.html">
             <button type="submit">Søg<br> </button>
 			</a>
         </div>
-        <img src="Eksamensopgave logoer/Satelit.png" alt="Logo" class="header-logo">
+        <img src="../../Documents/GitHub/Opgaver/Eksamensopgave logoer/Satelit.png" alt="Logo" class="header-logo">
         <div class="white-header-box">
             <p>8500, Grenaa</p>
         </div>
@@ -30,7 +30,7 @@
 
 
 <di class="reklame-banner">
-<img src="Eksamensopgave logoer/Skousen banner.jpg" alt="reklame banner til skousen">
+<img src="../../Documents/GitHub/Opgaver/Eksamensopgave logoer/Skousen banner.jpg" alt="reklame banner til skousen">
 </di>
 
 <div class="forside-grid">
@@ -49,17 +49,17 @@
 
 <div class="picture-grid">
 
-<img src="Eksamensopgave logoer/365.png" alt="billede af 365 logo">	
-<img src="Eksamensopgave logoer/Aldi.png" alt="billede af aldi logo">
-<img src="Eksamensopgave logoer/brugsen.png" alt="Billede af brugsen logo">
-<img src="Eksamensopgave logoer/kvickly rektangel.png" alt="Billede af kvickly logo">
-<img src="Eksamensopgave logoer/Lidl.png" alt="Billede af lidl logo">
-<img src="Eksamensopgave logoer/Min købmand.png" alt="billede af min købmand logo">
-<img src="Eksamensopgave logoer/Netto.png" alt="Billede af netto logo">
-<img src="Eksamensopgave logoer/Power.png" alt="billede af power logo">
-<img src="Eksamensopgave logoer/rema 1000.png" alt="billede af rema 1000 logo">
-<img src="Eksamensopgave logoer/spar.png" alt="billede af spar logo">
-<img src="Eksamensopgave logoer/Elgiganten.png" alt="billede af elgiganten logo">	
+<img src="../../Documents/GitHub/Opgaver/Eksamensopgave logoer/365.png" alt="billede af 365 logo">	
+<img src="../../Documents/GitHub/Opgaver/Eksamensopgave logoer/Aldi.png" alt="billede af aldi logo">
+<img src="../../Documents/GitHub/Opgaver/Eksamensopgave logoer/brugsen.png" alt="Billede af brugsen logo">
+<img src="../../Documents/GitHub/Opgaver/Eksamensopgave logoer/kvickly rektangel.png" alt="Billede af kvickly logo">
+<img src="../../Documents/GitHub/Opgaver/Eksamensopgave logoer/Lidl.png" alt="Billede af lidl logo">
+<img src="../../Documents/GitHub/Opgaver/Eksamensopgave logoer/Min købmand.png" alt="billede af min købmand logo">
+<img src="../../Documents/GitHub/Opgaver/Eksamensopgave logoer/Netto.png" alt="Billede af netto logo">
+<img src="../../Documents/GitHub/Opgaver/Eksamensopgave logoer/Power.png" alt="billede af power logo">
+<img src="../../Documents/GitHub/Opgaver/Eksamensopgave logoer/rema 1000.png" alt="billede af rema 1000 logo">
+<img src="../../Documents/GitHub/Opgaver/Eksamensopgave logoer/spar.png" alt="billede af spar logo">
+<img src="../../Documents/GitHub/Opgaver/Eksamensopgave logoer/Elgiganten.png" alt="billede af elgiganten logo">	
 
 </div>
 
